; ModuleID = '/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-binlog.c_dump_set_flags.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/lists/extr_lists-binlog.c_dump_set_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_set_flags = type { i32, i32, i32 }

@.str = private unnamed_addr constant [7 x i8] c"%s+%d\09\00", align 1
@LEV_LI_SET_FLAGS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dump_set_flags(i32* %0, i8* %1, i32 %2, %struct.lev_set_flags* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.lev_set_flags*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.lev_set_flags* %3, %struct.lev_set_flags** %8, align 8
  %9 = load i32, i32* %7, align 4
  %10 = icmp sle i32 0, %9
  br i1 %10, label %11, label %14

11:                                               ; preds = %4
  %12 = load i32, i32* %7, align 4
  %13 = icmp sle i32 %12, 255
  br label %14

14:                                               ; preds = %11, %4
  %15 = phi i1 [ false, %4 ], [ %13, %11 ]
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i32*, i32** %5, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = load %struct.lev_set_flags*, %struct.lev_set_flags** %8, align 8
  %21 = getelementptr inbounds %struct.lev_set_flags, %struct.lev_set_flags* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @LEV_LI_SET_FLAGS, align 4
  %24 = sub nsw i32 %22, %23
  %25 = call i32 @fprintf(i32* %18, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %19, i32 %24)
  %26 = load i32*, i32** %5, align 8
  %27 = load %struct.lev_set_flags*, %struct.lev_set_flags** %8, align 8
  %28 = getelementptr inbounds %struct.lev_set_flags, %struct.lev_set_flags* %27, i32 0, i32 2
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @dump_list_id(i32* %26, i32 %29)
  %31 = load i32*, i32** %5, align 8
  %32 = call i32 @fputc(i8 signext 9, i32* %31)
  %33 = load i32*, i32** %5, align 8
  %34 = load %struct.lev_set_flags*, %struct.lev_set_flags** %8, align 8
  %35 = getelementptr inbounds %struct.lev_set_flags, %struct.lev_set_flags* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @dump_object_id(i32* %33, i32 %36)
  %38 = load i32*, i32** %5, align 8
  %39 = call i32 @fputc(i8 signext 10, i32* %38)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @fprintf(i32*, i8*, i8*, i32) #1

declare dso_local i32 @dump_list_id(i32*, i32) #1

declare dso_local i32 @fputc(i8 signext, i32*) #1

declare dso_local i32 @dump_object_id(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
